# can-simulator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: renovate.json
.github/workflows/: test.yml
can_simulator/: simulator.py
