[tool.poetry]
name = "can_simulator"
version = "0.1.0"
description = ""
authors = ["Team Relectric <info@teamrelectric.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
flake8-absolute-import = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
skip_gitignore = true
