[tool.poetry]
authors = ["Team Relectric <info@teamrelectric.ca>"]
description = ""
license = "MIT"
name = "can_simulator"
version = "0.1.0"

[tool.poetry.dependencies]
pyserial = "^3.5"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^5.0.0"
flake8-absolute-import = "^1.0"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
skip_gitignore = true
